composer.json altered.

--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,25 @@
 {
-    "name": "jtlshop/QRcodeGenerator",
-    "description": "Shop4 QRCode-Generator",
-    "version": "1.0.0",
-    "homepage": "https://jtl-software.de/",
-    "type": "library",
+    "name": "clemens.rudolph/qrcode-generator",
+    "description": "QRCode-Generator adopted from chillerlan/php-qrcode",
+    "type": "package",
+    "require": {
+        "php": "5.4.45"
+    },
     "license": "MIT",
     "authors": [
+		{
+			"name": "Kazuhiko Arase",
+			"homepage": "https://github.com/kazuhikoarase"
+		},
+		{
+			"name": "Smiley",
+			"email": "smiley@chillerlan.net"
+		},
         {
-            "name": "JTL-Software GmbH",
-            "email": "info@jtl-software.de",
-            "homepage": "https://jtl-software.de/"
+            "name": "JTL-Software-GmbH",
+            "email": "info@jtl-software.com",
+			"homepage": "https://www.jtl-software.de/"
         }
     ],
-    "require": {
-        "php": "^5.4.45"
-    }
+    "minimum-stability": "stable"
 }
-
-
