--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "clemens.rudolph/qrcode-generator",
     "description": "QRCode-Generator adopted from chillerlan/php-qrcode",
     "type": "package",
+	"version": "0.0.1",
     "require": {
         "php": "5.4.45"
     },
@@ -21,5 +22,5 @@
 			"homepage": "https://www.jtl-software.de/"
         }
     ],
-    "minimum-stability": "stable"
+    "minimum-stability": "alpha"
 }
