--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "package",
 	"version": "0.0.1",
     "require": {
-        "php": "5.4.45"
+        "php": ">=5.4.45"
     },
     "license": "MIT",
     "authors": [
