namespace changed, composer.json adapted

--- a/composer.json
+++ b/composer.json
@@ -2,25 +2,30 @@
     "name": "clemens.rudolph/qrcode-generator",
     "description": "QRCode-Generator adopted from chillerlan/php-qrcode",
     "type": "package",
-	"version": "0.0.1",
+    "version": "0.0.1",
     "require": {
         "php": ">=5.4.45"
     },
     "license": "MIT",
     "authors": [
-		{
-			"name": "Kazuhiko Arase",
-			"homepage": "https://github.com/kazuhikoarase"
-		},
-		{
-			"name": "Smiley",
-			"email": "smiley@chillerlan.net"
-		},
+        {
+            "name": "Kazuhiko Arase",
+            "homepage": "https://github.com/kazuhikoarase"
+        },
+        {
+            "name": "Smiley",
+            "email": "smiley@chillerlan.net"
+        },
         {
             "name": "JTL-Software-GmbH",
             "email": "info@jtl-software.com",
-			"homepage": "https://www.jtl-software.de/"
+            "homepage": "https://www.jtl-software.de/"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "qrcodegenerator\\QRCode\\": "src/"
+        }
+    },
     "minimum-stability": "alpha"
 }
